<resources>
    <string name="app_name">Message</string>
    <string name="sign_in_launcher">Welcome!</string>
    <string name="creat_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_have_account">Do not have account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Username</string>
    <string name="select_users">Select users</string>
    <string name="online">Online</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_name">Change username</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="chat">Chat</string>
    <string name="sign_out">Sign out</string>
    <string name="choose_image">Choose image</string>
    <string name="type_message">Type message</string>
    <string name="username">Username</string>
    <string name="dark_mode">Dark mode</string>
    <string name="empty_avatar">Avatar cannot be empty</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_password">Password cannot not be empty</string>
    <string name="incorrect_confirm_password">Incorrect confirm password</string>
    <string name="incorrect_account">Incorrect account or password</string>
    <string name="confirm_sign_out">Do you want to sign out?</string>
    <string name="cannot_sign_out">Cannot to sign out</string>
    <string name="cancel">Cancel</string>
    <string name="doubleBackToExitPressedOnce">Please click back again to exit</string>
    <string name="update_avatar_success">Change avatar success</string>
    <string name="update_avatar_fail">Change avatar fail</string>
    <string name="update_username_success">Change username success</string>
    <string name="update_username_fail">Change username fail</string>
    <string name="update_password_success">Change password success</string>
    <string name="update_password_fail">Change password fail</string>
    <string name="empty_current_password">Current password cannot not be empty</string>
    <string name="incorrect_current_password">Incorrect current password</string>
    <string name="empty_new_password">New password cannot not be empty</string>
    <string name="incorrect_confirm_new_password">Incorrect confirm new password</string>
    <string name="no_user_available">No user available</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="job">Job</string>
    <string name="update_inform">Update information</string>
    <string name="undetected">Undetected</string>
    <string name="update_inform_success">Update information success</string>
    <string name="update_inform_fail">Update information fail</string>
    <string name="account_inform">User information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="select">Click to select date</string>
</resources>