<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color"
        tools:context=".activities.profile.UpdateProfileActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            app:tint="?attr/button_color"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/black"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imageBack">

        <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:layout_marginTop="0dp"/>

        <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="?attr/text"/>

        <FrameLayout
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp">

            <androidx.appcompat.widget.SwitchCompat
                    android:padding="@dimen/_10sdp"
                    android:id="@+id/dark_mode"
                    android:checked="false"
                    android:text="@string/dark_mode"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="?attr/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/change_avatar"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_avatar"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="?attr/text"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/change_name"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_name"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="?attr/text"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/change_password"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="?attr/text"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"/>
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/imageSignOut"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                app:cornerRadius="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/sign_out"
                app:backgroundTint="?attr/button_color"
                android:textColor="?attr/text_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>